--- a/pom.xml
+++ b/pom.xml
@@ -66,12 +66,12 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 			<version>3.3.3</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/com.cloudinary/cloudinary-http44 -->
-		<dependency>
-			<groupId>com.cloudinary</groupId>
-			<artifactId>cloudinary-http44</artifactId>
-			<version>1.38.0</version>
-		</dependency>
+	<!-- https://mvnrepository.com/artifact/com.cloudinary/cloudinary-core -->
+	<dependency>
+		<groupId>com.cloudinary</groupId>
+		<artifactId>cloudinary-core</artifactId>
+		<version>1.38.0</version>
+	</dependency>
 	</dependencies>
 
 	<build>
