--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,14 @@
-spring.config.import=file:env.properties
+spring.config.import=optional:file:env.properties
 spring.application.name=D5S2U5
-
 # Server Config
-server.port=${SERVER_PORT}
+server.port=3001
 # DB Config
 spring.datasource.username=${PG_USERNAME}
 spring.datasource.password=${PG_PW}
-spring.datasource.url=${PG_URL}
-spring.datasource.driver=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/D5S2U5
+spring.datasource.drivere=org.postgresql.Driver
 # Hibernate Config
 spring.jpa.hibernate.ddl-auto=update
-
 # Cloudinary Config
 cloudinary.name=${CLOUDINARY_NAME}
 cloudinary.key=${CLOUDINARY_KEY}
